crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__dashboard_e2e_chatwidget_tsx.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
expression: chat.1
---
import React, { useState } from "react";

export function ChatWidget(): React.ReactElement {
    const [messages, set_messages] = useState([]);
    const [input, set_input] = useState("");
  return (
    <div className="px-4">
    <div className={["flex", "flex-col", "chat"].filter(Boolean).join(" ")}>
      <input aria-label={"Chat message"} className={["flex", "h-9", "w-full", "rounded-md", "border", "border-input", "bg-transparent", "px-3", "py-1", "text-sm", "shadow-sm", "focus-visible:outline-none", "focus-visible:ring-1", "focus-visible:ring-ring", "chat-input"].filter(Boolean).join(" ")} onChange={(e) => set_input(e.target.value)} value={input} />
      <button className={["inline-flex", "items-center", "justify-center", "rounded-md", "text-sm", "font-medium", "ring-offset-background", "transition-colors", "focus-visible:outline-none", "focus-visible:ring-2", "focus-visible:ring-ring", "focus-visible:ring-offset-2", "disabled:pointer-events-none", "disabled:opacity-50", "bg-primary", "text-primary-foreground", "hover:bg-primary/90", "h-10", "px-4", "py-2", "send-btn"].filter(Boolean).join(" ")} onClick={((e) => (set_input("")))}>
        {"Send"}
      </button>
    </div>
    </div>
  );
}
