crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__dashboard_e2e_dash_tsx.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
assertion_line: 558
expression: dash.1
---
import React, { useState } from "react";

export function Dashboard(): React.ReactElement {
  const [n, set_n] = useState(0);
  return (
    <div className="px-4">
    <div className={["flex", "flex-col", "dash"].filter(Boolean).join(" ")}>
      {n}
    </div>
    </div>
  );
}
