crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__hooks_demo_tsx_all_hooks.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_02.rs
assertion_line: 96
expression: tsx.1
---
import React, { useState, useEffect, useMemo, useRef, useCallback } from "react";

export function HooksDemo(): React.ReactElement {
    const [count, set_count] = useState(0);
    const doubled = useMemo(((_x) => (count * 2)));
    const input_ref = useRef(0);
    const increment = useCallback(((_e) => (set_count(count + 1))));
    useEffect(((_x) => (count)));
  return (
    <div className="px-4">
    <div className={["flex", "flex-col", "hooks_demo"].filter(Boolean).join(" ")}>
      <div className={["flex", "flex-col", "count-row"].filter(Boolean).join(" ")}>
        {count}
      </div>
      <div className={["flex", "flex-col", "doubled-row"].filter(Boolean).join(" ")}>
        {doubled}
      </div>
      <button className={["inline-flex", "items-center", "justify-center", "rounded-md", "text-sm", "font-medium", "ring-offset-background", "transition-colors", "focus-visible:outline-none", "focus-visible:ring-2", "focus-visible:ring-ring", "focus-visible:ring-offset-2", "disabled:pointer-events-none", "disabled:opacity-50", "bg-primary", "text-primary-foreground", "hover:bg-primary/90", "h-10", "px-4", "py-2", "increment-btn"].filter(Boolean).join(" ")} onClick={increment}>
        {"+"}
      </button>
    </div>
    </div>
  );
}
