crates/vox-integration-tests/tests/pipeline/includes/snapshots/pipeline_test__table_task_lib_rs_emit.snap
---
source: crates/vox-integration-tests/tests/pipeline/includes/include_01.rs
expression: lib_rs
---
use serde::{Serialize, Deserialize};
use vox_db::Codex;
pub fn as_string<T: serde::Serialize>(v: &T) -> String {
    let val = serde_json::to_value(v).expect("vox codegen: serde_json::to_value failed");
    if let Some(s) = val.as_str() {
        return s.to_string();
    }
    if val.is_f64() {
        if let Some(f) = val.as_f64() {
            if f.is_finite() && f.fract() == 0.0 {
                return format!("{}", f as i64);
            }
        }
    }
    val.to_string()
}
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Task {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub _id: Option<i64>,
    pub title: String,
    pub done: bool,
    pub priority: i64,
}
impl Task {
    pub async fn insert(db: &Codex, item: &Self) -> Result<i64, turso::Error> {
        db.connection()
            .execute(
                "INSERT INTO task (title, done, priority) VALUES (?1, ?2, ?3)",
                (
                    turso::Value::Text(item.title.clone()),
                    turso::Value::Integer(item.done as i64),
                    turso::Value::Integer(item.priority),
                ),
            )
            .await?;
        Ok(db.connection().last_insert_rowid())
    }
    pub async fn update(
        db: &Codex,
        id: i64,
        item: &Self,
    ) -> Result<usize, turso::Error> {
        let n = db
            .connection()
            .execute(
                "UPDATE task SET title = ?1, done = ?2, priority = ?3 WHERE _id = ?4",
                (
                    turso::Value::Text(item.title.clone()),
                    turso::Value::Integer(item.done as i64),
                    turso::Value::Integer(item.priority),
                    turso::Value::from(id),
                ),
            )
            .await?;
        Ok(n as usize)
    }
    pub async fn get(db: &Codex, id: i64) -> Result<Option<Self>, turso::Error> {
        let mut rows = db
            .connection()
            .query("SELECT * FROM task WHERE _id = ?1", (id,))
            .await?;
        Ok(
            match rows.next().await? {
                Some(row) => Some(Self::from_row(&row)?),
                None => None,
            },
        )
    }
    pub async fn all(db: &Codex) -> Result<Vec<Self>, turso::Error> {
        let mut rows = db.connection().query("SELECT * FROM task", ()).await?;
        let mut out = Vec::new();
        while let Some(row) = rows.next().await? {
            out.push(Self::from_row(&row)?);
        }
        Ok(out)
    }
    pub async fn all_order_limit(
        db: &Codex,
        order_clause: &str,
        limit: Option<i64>,
    ) -> Result<Vec<Self>, turso::Error> {
        let mut sql = "SELECT * FROM task".to_string();
        if !order_clause.trim().is_empty() {
            sql.push_str(" ORDER BY ");
            sql.push_str(order_clause);
        }
        if let Some(l) = limit {
            sql.push_str(&format!(" LIMIT {}", l.max(0)));
        }
        let mut rows = db.connection().query(&sql, ()).await?;
        let mut out = Vec::new();
        while let Some(row) = rows.next().await? {
            out.push(Self::from_row(&row)?);
        }
        Ok(out)
    }
    pub async fn count(db: &Codex) -> Result<i64, turso::Error> {
        let mut rows = db.connection().query("SELECT COUNT(*) FROM task", ()).await?;
        let row = rows.next().await?.ok_or(turso::Error::QueryReturnedNoRows)?;
        let c: i64 = row.get(0)?;
        Ok(c)
    }
    pub async fn count_where(
        db: &Codex,
        where_clause: &str,
        params: impl turso::IntoParams + Send,
    ) -> Result<i64, turso::Error> {
        let sql = format!("SELECT COUNT(*) FROM task WHERE {}", where_clause);
        let mut rows = db.connection().query(&sql, params).await?;
        let row = rows.next().await?.ok_or(turso::Error::QueryReturnedNoRows)?;
        let c: i64 = row.get(0)?;
        Ok(c)
    }
    /// `WHERE` fragment uses `?1`, `?2`, … placeholders; bind with a positional tuple or `params_from_iter`.
    pub async fn filter_where(
        db: &Codex,
        where_clause: &str,
        params: impl turso::IntoParams + Send,
    ) -> Result<Vec<Self>, turso::Error> {
        let sql = format!("SELECT * FROM task WHERE {}", where_clause);
        let mut rows = db.connection().query(&sql, params).await?;
        let mut out = Vec::new();
        while let Some(row) = rows.next().await? {
            out.push(Self::from_row(&row)?);
        }
        Ok(out)
    }
    pub async fn filter_where_order_limit(
        db: &Codex,
        where_clause: &str,
        params: impl turso::IntoParams + Send,
        order_clause: &str,
        limit: Option<i64>,
    ) -> Result<Vec<Self>, turso::Error> {
        let mut sql = format!("SELECT * FROM task WHERE {}", where_clause);
        if !order_clause.trim().is_empty() {
            sql.push_str(" ORDER BY ");
            sql.push_str(order_clause);
        }
        if let Some(l) = limit {
            sql.push_str(&format!(" LIMIT {}", l.max(0)));
        }
        let mut rows = db.connection().query(&sql, params).await?;
        let mut out = Vec::new();
        while let Some(row) = rows.next().await? {
            out.push(Self::from_row(&row)?);
        }
        Ok(out)
    }
    /// Builds `format!("SELECT * FROM <table> {}", clause)` — use [`Self::all`] or [`Self::get`] when possible.
    pub async fn unsafe_query_raw_clause(
        db: &Codex,
        clause: &str,
    ) -> Result<Vec<Self>, turso::Error> {
        let sql = format!("SELECT * FROM task {}", clause);
        let mut rows = db.connection().query(&sql, ()).await?;
        let mut out = Vec::new();
        while let Some(row) = rows.next().await? {
            out.push(Self::from_row(&row)?);
        }
        Ok(out)
    }
    pub async fn delete(db: &Codex, id: i64) -> Result<usize, turso::Error> {
        let n = db.connection().execute("DELETE FROM task WHERE _id = ?1", (id,)).await?;
        Ok(n as usize)
    }
    fn from_row(row: &turso::Row) -> Result<Self, turso::Error> {
        let _id_val: i64 = row.get(0)?;
        Ok(Self {
            _id: Some(_id_val),
            title: row.get(1)?,
            done: row.get(2)?,
            priority: row.get(3)?,
        })
    }
}
